@@ -59,6 +59,10 @@
   <xsl:template match="strike"><s><xsl:apply-templates/></s></xsl:template>
   <xsl:template match="strong"><b><xsl:apply-templates/></b></xsl:template>
 
+  <!-- Block elements transformations -->
+  <xsl:template match="section"><div class="{@class}" style="{@style}"><xsl:apply-templates/></div></xsl:template>
+  <xsl:template match="article"><div  class="{@class}" style="{@style}"><xsl:apply-templates/></div></xsl:template>
+
   <xsl:template match="@*|node()">
     <xsl:copy>
       <xsl:apply-templates select="@*|node()"/>
