@@ -1,6 +1,7 @@
 CHANGELOG
 Version 0.6.0
 * Improve support for inline elements
+* Add basic support for section and article elements
 
 Version 0.5.1
 * Bugfix on ActionController::Renderers formats
